# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: app-tests.yaml
page_analyzer/: __init__.py  analyzer.py  app.py
page_analyzer/database/: __init__.py  database.py  repositories.py
page_analyzer/models/: __init__.py  url_checks.py  urls.py
page_analyzer/templates/: 404.html  index.html  layout.html
page_analyzer/templates/urls/: index.html  show.html
tests/: test_analyzer.py
tests/cassettes/: test_find_useful.yaml
